create responsive navbar

--- a/index.html
+++ b/index.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Interior consultant</title>
-            
-    <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdn.tailwindcss.com"></script>
 
-</head>
-<body>
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/root.css" />
+  </head>
+  <body class="container">
     <header>
-
+      <!-- Navbar start -->
+      <nav class="navbar">
+        <div class="logo">
+          <h1>This Interior</h1>
+        </div>
+        <div class="navigation">
+          <div class="nav-options">
+            <a class="nav-link">Home</a>
+            <a class="nav-link">Collection</a>
+            <a class="nav-link">About</a>
+            <a class="nav-link">Contact</a>
+          </div>
+        </div>
+        <div id="menu-icon" class="menu-icon ">
+          <img src="./images/menu.png" alt="" />
+        </div>
+      </nav>
+      <!-- Navbar End -->
     </header>
-    <main>
-
-    </main>
-    <footer>
-        
-    </footer>
-</body>
+    <main></main>
+    <footer></footer>
+    <!-- JS Connection -->
+    <script src="./Js/main.js"></script>
+  </body>
 </html>
