create responsive banner

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Interior consultant</title>
-    <link rel="shortcut icon" href="./images/furniture.png" type="image/x-icon">
+    <link
+      rel="shortcut icon"
+      href="./images/furniture.png"
+      type="image/x-icon"
+    />
 
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/root.css" />
@@ -24,13 +28,36 @@
             <a class="nav-link">Contact</a>
           </div>
         </div>
-        <div id="menu-icon" class="menu-icon ">
+        <div id="menu-icon" class="menu-icon">
           <img src="./images/menu.png" alt="" />
         </div>
       </nav>
       <!-- Navbar End -->
     </header>
-    <main></main>
+    <main>
+      <!-- Banner Section Start -->
+      <section class="banner-section">
+        <div class="banner-content">
+          <h1>Modern interior</h1>
+          <p>
+            A full-Service residential & <br />
+            commercial interior design and <br />
+            staging company offering <br />
+            professional organizing & <br />
+            eco-services.
+          </p>
+
+         <div class="more">
+            <span>Read more</span> 
+            <img src="./images/right-arrow.png" alt="">
+         </div>
+        </div>
+        <div class="banner-img">
+            <img src="./images/photo1.png" alt="">
+        </div>
+      </section>
+      <!-- Banner Section End -->
+    </main>
     <footer></footer>
     <!-- JS Connection -->
     <script src="./Js/main.js"></script>
