create responsive profiles

--- a/index.html
+++ b/index.html
@@ -47,13 +47,23 @@
             eco-services.
           </p>
 
-         <div class="more">
-            <span>Read more</span> 
-            <img src="./images/right-arrow.png" alt="">
-         </div>
+          <div class="more">
+            <span>Read more</span>
+            <img src="./images/right-arrow.png" alt="" />
+          </div>
         </div>
         <div class="banner-img">
-            <img src="./images/photo1.png" alt="">
+          <img src="./images/photo1.png" alt="" />
+          <div class="profiles">
+            <div class="profile-info">
+              <img src="./images/photo2.png" alt="" />
+              <div>
+                <h3 style="font-weight: 500; font-size: 20px;">Aliza Webber</h3>
+              <p style="font-weight: 500; font-size: 12px; opacity: 0.4; margin-top: 10px;">Interior Designer</p>
+              </div>
+            </div>
+            <h1 style="font-size: 24px; font-weight: 700; font-family: 'Lora';">Designed in 2020 by <br> Aliza Webber</h1>
+          </div>
         </div>
       </section>
       <!-- Banner Section End -->
